mdapi_output_dir/objects/Equipment__c.object
<CustomObject>
    <description>Aerial equipment for Pesticide Businesses doing aerial applications</description>
    <label>Aerial Equipment</label>
    <nameField>
        <label>FFA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aerial Equipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aerial Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>